Blog updates and refactored descriptor sets
Tidy pass on blog: commands, pipeline, textures
Updated submitAndWait()
Replaced Entry with Modified in descriptor sets
Updated blog accordingly